2006-01-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* tests/Class+Meth.R (tstMatrixClass): function for much better
	testing; now again of all actual classes.

	* src/Mutils.c (MAKE_TRIANGULAR_BODY, MAKE_SYMMETRIC_BODY):
		use macros and define make_d_matrix_* and make_i_matrix_*
		where _i_ is for the ldense routines:

	* src/ldense.c (ltrMatrix_as_lgeMatrix): provide functions
	* src/ldense.c (lsyMatrix_as_lgeMatrix):

	* R/ldenseMatrix.R: use the above in setAs(*,"lgeMatrix")


2006-01-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Matrix.R (Matrix): has become much "smarter" now auto-producing
		many different kinds of matrices.
	* R/*.R: quite a few new methods were needed for R CMD check with
		new Matrix().  Very good for users playing around.


2006-01-15  Martin Maechler  <maechler@stat.math.ethz.ch>

	* src/dgeMatrix.c (dMatrix_validate): new
	* src/Mutils.c (dense_nonpacked_validate): new

	* src/dtrMatrix.c (dtrMatrix_validate): improved/fixed


2006-01-14  Douglas Bates  <bates@stat.wisc.edu>

	* R/AllClass.R (compMatrix), (generalMatrix): new virtual classes

2006-01-07  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): 0.99-6 released to CRAN

	* src/dgBCMatrix.c (cscb_trcbsm): Fix due to Peter Dalgaard for
	segfault in cases with multiple non-nested grouping factors.

2006-01-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.99-4 to be released to CRAN
		(Depends): also on 'utils'

	* R/AllClass.R (diagonalMatrix): new class with "ddi*" and "ldi*"
	* R/diagMatrix.R (Diagonal): constructor and methods for
	diagonal matrices

	* R/ltTMatrix.R: new "minimal methods"

2005-12-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/AllGeneric.R (tcrossprod): 2-argument version; here, and for
	all methods (and help files).

2005-12-09  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/Auxiliaries.R (dimNamesCheck): fixed thinko -> bug
		for case (dimn.	 op  no_dimn.)
